# Cloud

./: README.md  license
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json  docker-compose.yml  init.sql
.devcontainer/frontend/: devcontainer.json  docker-compose.yml  init.sql
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/bindings/: FixedSizedStr.ts
backend/src/: fairings.rs  http_span.rs  lib.rs  main.rs
backend/src/data_definitions/: FixedStr.rs  email.rs  fixed_len_str.rs  jwt.rs  mod.rs  user.rs
backend/src/database/: mod.rs
backend/src/database/user_repository/: create.rs  delete.rs  email_exists.rs  get_login_view.rs  get_user_info.rs  mod.rs
backend/src/database/virtual_filesystem/: create_file.rs  create_folder.rs  get_file.rs  list_files.rs  mod.rs
backend/src/object_storage/: mod.rs  s3.rs
backend/src/routes/: delete.rs  delete_user.rs  files.rs  login.rs  logout.rs  me.rs  mod.rs  signup.rs  signup_confirmation.html  upload.rs
docs/: arc42.md
frontend/: Dockerfile  Dockerfile.prod  nginx.prod.conf
frontend/vue-project/: package-lock.json  package.json  tsconfig.vitest.json  vite.config.ts
frontend/vue-project/src/: App.vue
frontend/vue-project/src/components/nav/: SideBar.vue
frontend/vue-project/src/components/ui/: BaseBadge.vue  BaseButton.vue  BaseFileDescriptor.vue  BaseInput.vue  BaseNotification.vue  BaseSpinner.vue  CallToAction.vue  CircularGauge.vue  NotAuthorized.vue  UploadButton.vue
frontend/vue-project/src/router/: index.ts
frontend/vue-project/src/stores/: auth.ts  files.ts
frontend/vue-project/src/types/: api.ts
frontend/vue-project/src/types/bindings/: StandardUserView.ts  UserLoginRequest.ts  UserSignupRequest.ts
frontend/vue-project/src/utils/: format.ts  timeOfDay.ts
frontend/vue-project/src/views/: HomePage.vue  LoginPage.vue  Profile.vue  SignUp.vue
frontend/vue-project/src/views/__tests__/: Profile.spec.ts
infra/: docker-compose.yml  init.sql
reverse_proxy/: Dockerfile  entrypoint.sh  nginx.conf
(+4 files in other folders)
