[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.228"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql" ] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


