[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
jsonwebtoken = {version = "10.3.0", features = ["aws_lc_rs"]}
lettre = { version = "0.11.20", default-features = false, features = ["tokio1", "tokio1-rustls", "smtp-transport", "ring", "webpki-roots", "builder", "pool"], optional=true }
rocket = { version = "0.5.1", features = ["json"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
serde = "1.0.228"
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono", "uuid" ] }
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt", "std"] }
rocket_cors = "0.6.0"

ts-rs = { version = "12.0.1", optional = true }
minio = "0.3.0"
tokio-util = { version = "0.7", features = ["io"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.dev]
opt-level = 0


[features]
default = ["email"]
export_binding = ["ts-rs"]
email = ["lettre"]

[profile.release]
opt-level = 3
debug = false
#split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false


